--- a/src/frontend/css/components/particles.css
+++ b/src/frontend/css/components/particles.css
@@ -18,5 +18,5 @@
 	height: 100%;
 	top: 0;
 	left: 0;
-	z-index: -1;
+	z-index: 0;
 }
