--- a/src/frontend/css/pages/pong/howtoplay.css
+++ b/src/frontend/css/pages/pong/howtoplay.css
@@ -31,6 +31,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	color: var(--base-white);
 }
 
 .how-to-play-card.show
